# despachobot

microcontroller_observer/: Makefile  flake.nix  microcontroller_observer.ino
telegram_bot/: .envrc  .gitignore  Cargo.toml  flake.nix
telegram_bot/src/: codecs.rs  main.rs  microcontroller.rs  schema.rs
