[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
color-eyre = "0.6.3"
futures-util = { version = "0.3.30", features = ["sink"] }
humantime = "2.1.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tokio-serial = { version = "5.4.4", features = ["rt"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["codec"] }
